--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2",
+    "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
-    "passport": "^0.3.2",
+    "moment": "^2.21.0",
+    "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
-    "passport-jwt": "^2.2.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
 }
